DAY-03/elk/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: kibana-ingress
spec:
  rules:
    - host: kibana.mathis-medard.takima.school
      http:
        paths:
          - backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kibana.mathis-medard.takima.school
      secretName: kibana-tls
